fixed background bubbles spacing and colours
generated bubbles by mapping over an array for more dry code

--- a/src/App.css
+++ b/src/App.css
@@ -30,23 +30,23 @@ html,
 .bubbles {
 	position: relative;
 	display: flex;
+	justify-content: space-around;
 }
 
 .bubbles span {
 	position: relative;
-	width: 1rem;
-	height: 1rem;
-	background: #4fc3dc;
-	margin: 0 0.5rem;
+	width: 1vw;
+	height: 1vw;
+	background: #3216bb;
 	border-radius: 50%;
-	box-shadow: 0 0 0 0.3rem #4fc3dc44, 0 0 1.5rem #4fc3dc, 0 0 3rem #4fc3dc;
+	box-shadow: 0 0 0 0.3rem #3216bb44, 0 0 1.5rem #3216bb, 0 0 3rem #3216bb;
 	animation: animate 15s linear infinite;
 	animation-duration: calc(180s / var(--i));
 }
 
 .bubbles span:nth-child(even) {
-	background: #ff2d75;
-	box-shadow: 0 0 0 0.3rem #ff2d7544, 0 0 1.5rem #ff2d75, 0 0 3rem #ff2d75;
+	background: #fd0000;
+	box-shadow: 0 0 0 0.3rem #fd000044, 0 0 1.5rem #fd0000, 0 0 3rem #fd0000;
 }
 @keyframes animate {
 	0% {
